Modified catalina.sh